Revert layout, fix line number overlap

--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -254,7 +254,7 @@ body {
   counter-increment: line;
   display: block;
   min-height: 1.625em;
-  padding-left: 3.75rem;
+  padding-left: 4.25rem; /* Increased padding to give more room for line numbers */
   position: relative;
   scroll-margin: 6rem;
 }
@@ -262,7 +262,7 @@ body {
   content: counter(line);
   position: absolute;
   left: 1rem;
-  width: 2.25rem;
+  width: 2.5rem; /* slightly wider box for line numbers */
   text-align: right;
   color: var(--color-code-ink-faint);
   user-select: none;
